--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,44 @@
 /* You can add global styles to this file, and also import other style files */
+html, body {
+    font-family: 'Be Vietnam Pro', sans-serif;
+    margin: 0;
+    height: 100%;
+    background: rgb(248, 248, 248);
+}
+
+body { margin: 0; }
+
+
+.tileRow {
+    display: flex;
+    direction: row;
+}
+
+.tile {
+    display: flex;
+    background: white;
+    border: 1px solid black;
+    width: 50px;
+    height: 8vh;
+    margin: 3px;
+    font-weight: bold;
+    border-radius: 5px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-transform: upperase;
+}
+
+
+
+.CORRECT {
+    background: rgb(117, 187, 117);
+}
+
+.WRONG_POSITION {
+    background: rgb(196, 196, 118);
+}
+
+.INCORRECT {
+    background: rgb(199, 128, 128);
+}
+
