--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <div id="mainContainer">
   <div id="header">
-    <h1>Wordie</h1>
+    <a id="headerTitle" href="/">
+      <h1>Wordie</h1>
+    </a>
     <div id="options">
       <mat-icon (click)="presentHelpDialog()">help</mat-icon>
     </div>
