--- a/src/app/result-dialog/result-dialog.component.html
+++ b/src/app/result-dialog/result-dialog.component.html
@@ -1,6 +1,7 @@
 <div id="mainContainer"> 
     <div>
-        <p>You got it!</p>
+        <p *ngIf="solved">You got it!</p>
+        <p *ngIf="!solved">The wordie was {{todaysWord}}</p>
     </div>   
     <div id="result">
         {{result}}</div>
