--- a/src/app/win-game-dialog/win-game-dialog.component.css
+++ b/src/app/win-game-dialog/win-game-dialog.component.css
@@ -21,3 +21,8 @@
     background: rgb(96, 172, 96);
     padding: 7px;
 }
+
+#copyButton:hover {
+    cursor: pointer;
+    background: rgb(61, 155, 61);
+}
